<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_activity"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        >

    <Button
            android:layout_width="260dp"
            android:layout_height="37dp"
            android:id="@+id/listButton"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:background="@drawable/custom_button"
            android:text="@string/lista_zakup_w"
            android:textColor="@color/textColor"
            android:fontFamily="@font/sinkinsans500medium"
            android:textSize="12dp"
            android:textAllCaps="false"
            app:layout_constraintVertical_bias="0.752"
            android:onClick="shopListButtonMethod"/>
    <Button
            android:layout_width="260dp"
            android:layout_height="37dp"
            android:id="@+id/optionButton"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:text="@string/opcje"
            android:textColor="@color/textColor"
            android:textSize="12dp"
            android:background="@drawable/option_button"
            android:fontFamily="@font/sinkinsans500medium"
            android:textAllCaps="false"
            app:layout_constraintVertical_bias="0.848"
            android:onClick="optionButtonMethod"/>
    <TextView
            android:text="@string/shop_list_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sinkinsans400regular"
            android:textSize="26dp"
            android:gravity="center"
            android:id="@+id/textView"
            android:textColor="@color/textColor" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/listButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.503" app:layout_constraintVertical_bias="0.621"/>
    <TextView
            android:text="@string/descriptionApp"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/sinkinsans400regular"
            android:id="@+id/textView2"
            android:textColor="@color/smallTextColor" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/listButton" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.257"/>
    <ImageView
            android:layout_width="84dp"
            android:layout_height="84dp" app:srcCompat="@drawable/logo"
            android:id="@+id/imageView6" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.939"/>
</androidx.constraintlayout.widget.ConstraintLayout>