<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ShopActivity"
        android:background="@color/backgroundList">

<LinearLayout
        android:id="@+id/layoutShopActivity"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="198dp"
        >

    <TextView
            android:id="@+id/titlePage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shopping_list"
            android:textSize="22sp"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:fontFamily="@font/sinkinsans500medium"
            android:layout_marginTop="28dp"/>

    <TextView
            android:id="@+id/descriptionPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manage_your_daily_purchases"
            android:textSize="12sp"
            android:textAlignment="center"
            android:textColor="@color/smallTextColor"
            android:fontFamily="@font/sinkinsans400regular"
            android:layout_marginTop="8dp"/>

    <View
            android:id="@+id/vSep"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimaryDark"
            android:layout_height="1dp"/>


</LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
                android:id="@+id/rVItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp">

        </android.support.v7.widget.RecyclerView>

        <TextView
                android:id="@+id/endpage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/endpage"
                android:layout_marginTop="20dp"
                android:textColor="@color/endpageColor"
                android:textAlignment="center"/>
    </LinearLayout>

        <android.support.design.widget.FloatingActionButton
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_gravity="end|right"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="25dp"

                android:src="@drawable/plus"
                app:backgroundTint="@color/buttonColor"
                android:layout_height="wrap_content"/>


</RelativeLayout>